--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -64,36 +64,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
-    "import ipyparallel as ipp\n",
     "\n",
-    "\n",
-    "# wait 10 seconds before running this cell after starting the cluster\n",
-    "client = ipp.Client(profile='mycluster1')\n",
-    "\n",
-    "\"\"\"\n",
-    "print(client.ids)\n",
-    "ar = client[:].apply_async(os.getpid)\n",
-    "ar.get_dict()\n",
-    "\"\"\" # get the PIDs or UUIDs"
+    "os.system(\"ipcluster start --n=4 --profile=mycluster0 --daemonize\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "load_balanced_view = client.load_balanced_view()"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -211,110 +223,181 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def foo(n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def print_keyword_args(**kwargs):\n",
-    "     # kwargs is a dict of the keyword args passed to the function\n",
-    "    for key, value in kwargs.items():\n",
-    "        print(\"%s = %s\" % (key, value))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'first_name': 'John', 'last_name': 'Doe'}"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import os\n",
+    "import ipyparallel as ipp\n",
+    "\n",
+    "        \n",
+    "class MultipleClusterEnginePrototype(object):\n",
+    "    def __init__(self, cluster_name, n_cpus_list): # always put it in as a dictionary\n",
+    "        self.cluster_name = cluster_name\n",
+    "        self.n_cpus_list = n_cpus_list\n",
+    "        self.client_dict = {}\n",
+    "        \n",
+    "    def start_cluster(self, n_cpus, cluster_id):\n",
+    "        print('\\tAttempting to start {}{} with {} CPUs'.format(self.cluster_name, cluster_id, n_cpus))\n",
+    "        os.system(\"ipcluster start --n={} --profile={}{} --daemonize\".format(\n",
+    "            n_cpus, self.cluster_name, cluster_id)) # should deprecate to use a safer bash call\n",
+    "\n",
+    "        attempt_ctr = 0 \n",
+    "        while attempt_ctr < 3: # Attempt to connect to client 3 times\n",
+    "            time.sleep(10) # hard coded\n",
+    "            try:\n",
+    "                client = ipp.Client(profile='{}{}'.format(self.cluster_name, cluster_id))\n",
+    "            except ipp.error.TimeoutError:\n",
+    "                attempt_ctr += 1\n",
+    "            else:\n",
+    "                print('\\t\\tCPU processes ready for action: {}'.format(client[:].apply_async(os.getpid).get()))\n",
+    "                return client\n",
+    "    \n",
+    "    def start_all_clusters(self):\n",
+    "        print('\\nAttempting to start all clusters')\n",
+    "        for cluster_id, n_cpus in enumerate(self.n_cpus_list):\n",
+    "            self.client_dict[cluster_id] = self.start_cluster(n_cpus, cluster_id)\n",
+    "        print('All clusters started\\n')\n",
+    "        \n",
+    "    def kill_cluster(self, cluster_id): # use better arguments\n",
+    "        # client = client_list[cluster_id]\n",
+    "        print('\\tAttempting to kill {}{} with CPU processes: {}:'.format(\n",
+    "            self.cluster_name, cluster_id, self.client_dict[cluster_id][:].apply_async(os.getpid).get()))\n",
+    "        # client.purge_everything()\n",
+    "        self.client_dict[cluster_id].close()\n",
+    "        os.system('ipcluster stop --profile={}{}'.format(self.cluster_name, cluster_id))\n",
+    "        print('\\t\\tCluster successfully killed')\n",
+    "        time.sleep(5) # hard-coded\n",
+    "        \n",
+    "    def kill_all_clusters(self):\n",
+    "        print('\\nAttempting to kill all clusters')\n",
+    "        for cluster_id in self.client_dict:\n",
+    "            self.kill_cluster(cluster_id)\n",
+    "        print('All clusters have been killed\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mce_args = {\n",
+    "    'cluster_name': 'mycluster',\n",
+    "    'n_cpus_list': [4, 3, 2], # 1st cluster is always the largest or equal to the other clusters\n",
+    "    }\n",
+    "\n",
+    "mce = MultipleClusterEnginePrototype(**mce_args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "first_name = John\n",
-      "last_name = Doe\n"
+      "\n",
+      "Attempting to start all clusters\n",
+      "\tAttempting to start mycluster0 with 4 CPUs\n",
+      "\t\tCPU processes ready for action: [5029, 5031, 5033, 5037]\n",
+      "\tAttempting to start mycluster1 with 3 CPUs\n",
+      "\t\tCPU processes ready for action: [5103, 5100, 5102]\n",
+      "\tAttempting to start mycluster2 with 2 CPUs\n",
+      "\t\tCPU processes ready for action: [5160, 5162]\n",
+      "All clusters started\n",
+      "\n",
+      "\n",
+      "Attempting to kill all clusters\n",
+      "\tAttempting to kill mycluster0 with CPU processes: [5029, 5031, 5033, 5037]:\n",
+      "\t\tCluster successfully killed\n",
+      "\tAttempting to kill mycluster1 with CPU processes: [5103, 5100, 5102]:\n",
+      "\t\tCluster successfully killed\n",
+      "\tAttempting to kill mycluster2 with CPU processes: [5160, 5162]:\n",
+      "\t\tCluster successfully killed\n",
+      "All clusters have been killed\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print_keyword_args(**{'first_name': \"John\", 'last_name': \"Doe\"})"
+    "mce.start_all_clusters()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 127,
    "metadata": {
-    "collapsed": true
+    "scrolled": false
    },
-   "outputs": [],
-   "source": [
-    "def foo(first, second, third):\n",
-    "    print('first: {}'.format(first))\n",
-    "    print('second: {}'.format(second))\n",
-    "    print('third: {}'.format(third))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "foo() got an unexpected keyword argument 'fourth'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-93-d9cc9ab29d51>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfoo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'first'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'second'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'third'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'fourth'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: foo() got an unexpected keyword argument 'fourth'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-02-23 23:35:58.458 [IPClusterStop] Stopping cluster [pid=3730] with [signal=<Signals.SIGINT: 2>]\r\n"
      ]
     }
    ],
    "source": [
-    "foo(**{'first': 1, 'second': 2, 'third': 3, 'fourth': 4})"
+    "mce.kill_all_clusters()\n",
+    "#!ipcluster stop --profile=mycluster2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import ipyparallel as ipp\n",
+    "\n",
+    "\n",
+    "# wait 10 seconds before running this cell after starting the cluster\n",
+    "client = ipp.Client(profile='mycluster0')\n",
+    "\n",
+    "print(client.ids)\n",
+    "ar = client[:].apply_async(os.getpid)\n",
+    "ar.get_dict()\n",
+    "# get the PIDs or UUIDs\n",
+    "load_balanced_view = client.load_balanced_view()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -639,7 +722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
