trying to run the clusters

--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -227,20 +227,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create some fake files\n",
+    "for i in range(10):\n",
+    "    !touch {i}.tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "import os\n",
     "import ipyparallel as ipp\n",
-    "\n",
+    "from collections import defaultdict\n",
+    "from tqdm import tqdm\n",
+    "import itertools\n",
     "        \n",
     "class MultipleClusterEnginePrototype(object):\n",
-    "    def __init__(self, cluster_name, n_cpus_list): # always put it in as a dictionary\n",
+    "    def __init__(self, cluster_name, n_cpus_list, file_names, function_to_process, function_args_dict): # always put it in as a dictionary\n",
     "        self.cluster_name = cluster_name\n",
     "        self.n_cpus_list = n_cpus_list\n",
+    "        self.file_names = file_names\n",
+    "        self.function_to_process = function_to_process\n",
+    "        self.function_args_dict = function_args_dict\n",
+    "\n",
+    "        # used by engine\n",
     "        self.client_dict = {}\n",
+    "        self.load_balanced_view_dict = {}\n",
+    "        self.async_results_dict = defaultdict(list) # collects all the async_results\n",
     "        \n",
     "    def start_cluster(self, n_cpus, cluster_id):\n",
     "        print('\\tAttempting to start {}{} with {} CPUs'.format(self.cluster_name, cluster_id, n_cpus))\n",
@@ -257,17 +298,20 @@
     "            else:\n",
     "                print('\\t\\tCPU processes ready for action: {}'.format(client[:].apply_async(os.getpid).get()))\n",
     "                return client\n",
+    "            # if there is any other error other than TimeoutError, then the error will be raised\n",
     "    \n",
     "    def start_all_clusters(self):\n",
     "        print('\\nAttempting to start all clusters')\n",
     "        for cluster_id, n_cpus in enumerate(self.n_cpus_list):\n",
     "            self.client_dict[cluster_id] = self.start_cluster(n_cpus, cluster_id)\n",
+    "            self.load_balanced_view_dict[cluster_id] = self.client_dict[cluster_id].load_balanced_view()            \n",
     "        print('All clusters started\\n')\n",
     "        \n",
     "    def kill_cluster(self, cluster_id): # use better arguments\n",
     "        # client = client_list[cluster_id]\n",
-    "        print('\\tAttempting to kill {}{} with CPU processes: {}:'.format(\n",
+    "        print('\\tAttempting to kill {}{} with CPU processes: {}'.format(\n",
     "            self.cluster_name, cluster_id, self.client_dict[cluster_id][:].apply_async(os.getpid).get()))\n",
+    "        self.load_balanced_view_dict.pop(cluster_id)\n",
     "        # client.purge_everything()\n",
     "        self.client_dict[cluster_id].close()\n",
     "        os.system('ipcluster stop --profile={}{}'.format(self.cluster_name, cluster_id))\n",
@@ -278,18 +322,71 @@
     "        print('\\nAttempting to kill all clusters')\n",
     "        for cluster_id in self.client_dict:\n",
     "            self.kill_cluster(cluster_id)\n",
-    "        print('All clusters have been killed\\n')"
+    "        print('All clusters have been killed\\n')\n",
+    "        \n",
+    "    def running_clusters(self):        \n",
+    "        small_file_ctr = 1 # determine if you want to have queue or differently ordered queue\n",
+    "        big_file_ctr = 0\n",
+    "\n",
+    "        for ith_file in tqdm(range(len(self.file_names))):\n",
+    "            for jth_cluster in itertools.cycle(sorted(self.load_balanced_view_dict)): # infinite loop\n",
+    "                time.sleep(1) # hard coded delay time; want to do expected log time lag / number of clusters\n",
+    "                ### insert code here to kill cluster if RAM usage too great, if possible log which file it was processing;\n",
+    "                ### it has to do a global search of all clusters' RAM usage\n",
+    "                ### would need a dictionary here to remember which cluster has which file; write to disk\n",
+    "                ### profiler would also write to disk CPU usage what level\n",
+    "\n",
+    "                if (not async_results_dict[jth_cluster][-1:] \n",
+    "                    or async_results_dict[jth_cluster][-1].done()): # check if cluster i is available                       \n",
+    "                    # if necessary, recreate engine here\n",
+    "                    if jth_cluster == 0: # Send large files to large cluster (ALWAYS has id == 0)\n",
+    "                        index = big_file_ctr\n",
+    "                        big_file_ctr += 1\n",
+    "                    else: # Send small files to small clusters (ALWAYS have id > 0)\n",
+    "                        index = -small_file_ctr\n",
+    "                        small_file_ctr += 1\n",
+    "                                              \n",
+    "                                     \n",
+    "                    # clear cluster memory \n",
+    "\n",
+    "                    ### insert code to write results to file--it will only have start times, no end times\n",
+    "                    async_result = load_balanced_view_dict[jth_cluster].map_async(\n",
+    "                            self.function_to_process, # function name\n",
+    "                            [self.file_names[index]] * len(self.client_dict[jth_cluster].ids), # file name, assumes first argument is always file name\n",
+    "                            # [len(client_list[i].ids)] * len(client_list[i].ids), # number of CPUs, assumes second argument is always number of CPUs\n",
+    "                            #  client_list[i].ids # CPU ids, assumes third argument is always CPU id; actually turn into kwargs\n",
+    "                             # [output_folder_name] * len(client_list[i].ids) # assumes fourth argument is output directory\n",
+    "                            [function_args_dict] * len(self.client_dict[jth_cluster].ids)\n",
+    "                            )\n",
+    "                                              \n",
+    "                    self.async_results_dict[jth_cluster].append(async_result)\n",
+    "                    print(\"{} is the {}th file and is sent to {}{} for processing\".format(self.file_names[index], ith_file, self.cluster_name, jth_cluster))\n",
+    "                    break # break out of inner loop to determine if other clusters are available\n",
+    "        # async_results_dict; save to disk for later inspection?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() missing 3 required positional arguments: 'file_names', 'function_to_process', and 'function_args_dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-cf8743aa7cc0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     }\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mmce\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMultipleClusterEnginePrototype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mmce_args\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 3 required positional arguments: 'file_names', 'function_to_process', and 'function_args_dict'"
+     ]
+    }
+   ],
    "source": [
     "mce_args = {\n",
     "    'cluster_name': 'mycluster',\n",
     "    'n_cpus_list': [4, 3, 2], # 1st cluster is always the largest or equal to the other clusters\n",
+    "    \n",
     "    }\n",
     "\n",
     "mce = MultipleClusterEnginePrototype(**mce_args)"
@@ -297,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -309,22 +406,12 @@
       "\n",
       "Attempting to start all clusters\n",
       "\tAttempting to start mycluster0 with 4 CPUs\n",
-      "\t\tCPU processes ready for action: [5029, 5031, 5033, 5037]\n",
+      "\t\tCPU processes ready for action: [5261, 5263, 5265, 5269]\n",
       "\tAttempting to start mycluster1 with 3 CPUs\n",
-      "\t\tCPU processes ready for action: [5103, 5100, 5102]\n",
+      "\t\tCPU processes ready for action: [5332, 5334, 5336]\n",
       "\tAttempting to start mycluster2 with 2 CPUs\n",
-      "\t\tCPU processes ready for action: [5160, 5162]\n",
+      "\t\tCPU processes ready for action: [5392, 5394]\n",
       "All clusters started\n",
-      "\n",
-      "\n",
-      "Attempting to kill all clusters\n",
-      "\tAttempting to kill mycluster0 with CPU processes: [5029, 5031, 5033, 5037]:\n",
-      "\t\tCluster successfully killed\n",
-      "\tAttempting to kill mycluster1 with CPU processes: [5103, 5100, 5102]:\n",
-      "\t\tCluster successfully killed\n",
-      "\tAttempting to kill mycluster2 with CPU processes: [5160, 5162]:\n",
-      "\t\tCluster successfully killed\n",
-      "All clusters have been killed\n",
       "\n"
      ]
     }
@@ -335,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
@@ -344,7 +431,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-02-23 23:35:58.458 [IPClusterStop] Stopping cluster [pid=3730] with [signal=<Signals.SIGINT: 2>]\r\n"
+      "\n",
+      "Attempting to kill all clusters\n",
+      "\tAttempting to kill mycluster0 with CPU processes: [5261, 5263, 5265, 5269]:\n",
+      "\t\tCluster successfully killed\n",
+      "\tAttempting to kill mycluster1 with CPU processes: [5332, 5334, 5336]:\n",
+      "\t\tCluster successfully killed\n",
+      "\tAttempting to kill mycluster2 with CPU processes: [5392, 5394]:\n",
+      "\t\tCluster successfully killed\n",
+      "All clusters have been killed\n",
+      "\n"
      ]
     }
    ],
@@ -372,26 +468,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import os\n",
-    "import ipyparallel as ipp\n",
-    "\n",
-    "\n",
-    "# wait 10 seconds before running this cell after starting the cluster\n",
-    "client = ipp.Client(profile='mycluster0')\n",
-    "\n",
-    "print(client.ids)\n",
-    "ar = client[:].apply_async(os.getpid)\n",
-    "ar.get_dict()\n",
-    "# get the PIDs or UUIDs\n",
-    "load_balanced_view = client.load_balanced_view()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -411,49 +487,13 @@
    "source": [
     "class MultipleClusterEngine(object):\n",
     "    def __init__(self, **kwargs):\n",
-    "        self.n_clusters = n_clusters\n",
-    "        self.n_cpus = n_cpus\n",
     "        self.functions_to_run = functions_to_run\n",
     "        self.file_names = file_names\n",
     "        self.RAM_limit_in_GB = pass\n",
     "        # how to deal with other args/objects that functions might need\n",
-    "        self.cluster\n",
     "        self.mce_job_name = None\n",
     "        pass\n",
     "   \n",
-    "    def start_cluster(cluster_id, num_cpus):\n",
-    "        import time\n",
-    "        import os\n",
-    "        os.system(\"ipcluster start --n={} --profile={} --daemonize\".format(\n",
-    "            num_cpus, 'mycluster' + str(cluster_id))) # should deprecate to use a safer bash call\n",
-    "\n",
-    "        attempt_ctr = 0 \n",
-    "        while attempt_ctr < 3: # Attempt to connect to client 3 times\n",
-    "            time.sleep(10)\n",
-    "            try:\n",
-    "                client = ipp.Client(profile='mycluster' + str(cluster_id))\n",
-    "            except ipp.error.TimeoutError:\n",
-    "                attempt_ctr += 1\n",
-    "            else:\n",
-    "                print('\\nstarted CPU processes: {}:'.format(client[:].apply_async(os.getpid).get()))\n",
-    "                return client\n",
-    "            # if there is any other error other than TimeoutError, then the error will be raised\n",
-    "\n",
-    "    def kill_cluster(cluster_id, client_list):\n",
-    "        import time\n",
-    "        import os\n",
-    "        client = client_list[cluster_id]\n",
-    "        print('attempting to kill CPU processes: {}:'.format(client[:].apply_async(os.getpid).get()))\n",
-    "        #client.purge_everything()\n",
-    "        client.close()\n",
-    "        cluster = \"mycluster{}\".format(cluster_id)\n",
-    "        os.system('ipcluster stop --profile=mycluster{}'.format(str(cluster_id)))\n",
-    "        time.sleep(10)\n",
-    "    \n",
-    "    def spool_engines():\n",
-    "        for i in range(num_clusters):\n",
-    "            client_list.append(start_cluster(i, cpu_list[i]))\n",
-    "            load_balanced_view_list.append(client_list[i].load_balanced_view())\n",
     "\n",
     "    def memory_profiler():\n",
     "        pass # if all clusters are dead, then raise Error with a message\n",
@@ -504,9 +544,6 @@
     "                    break # break out of inner loop to determine if other clusters are available\n",
     "        # my_async_results_list; save to disk for later inspection?\n",
     "                            \n",
-    "    def shutdown_clusters():\n",
-    "        pass\n",
-    "        \n",
     "    def main():\n",
     "        start_time = now()\n",
     "        self.spool_engines()\n",
