getting close to V1.0

--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -259,6 +259,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def temp_f(name1):\n",
+    "    print('hello {}'.format(name1))\n",
+    "\n",
+    "def mapper_f(kwargs):\n",
+    "    return temp_f(**kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello lee\n",
+      "hello lee\n"
+     ]
+    }
+   ],
+   "source": [
+    "mapper_f({'name1': 'lee'})\n",
+    "(lambda kwargs: temp_f(**kwargs))({'name1': 'lee'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import copy\n",
+    "\n",
+    "temp_dict = copy.deepcopy({'a': 'b'})\n",
+    "temp_dict.update({'c': 'd'})\n",
+    "temp_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -269,19 +328,21 @@
     "from collections import defaultdict\n",
     "from tqdm import tqdm\n",
     "import itertools\n",
+    "from datetime import datetime\n",
     "        \n",
     "class MultipleClusterEnginePrototype(object):\n",
     "    def __init__(self, cluster_name, n_cpus_list, file_names, function_to_process, function_args_dict): # always put it in as a dictionary\n",
     "        self.cluster_name = cluster_name\n",
     "        self.n_cpus_list = n_cpus_list\n",
     "        self.file_names = file_names\n",
-    "        self.function_to_process = function_to_process\n",
+    "        self.function_to_process = lambda kwargs: function_to_process(**kwargs)\n",
     "        self.function_args_dict = function_args_dict\n",
     "\n",
     "        # used by engine\n",
     "        self.client_dict = {}\n",
     "        self.load_balanced_view_dict = {}\n",
     "        self.async_results_dict = defaultdict(list) # collects all the async_results\n",
+    "        self.cluster_indexes = None\n",
     "        \n",
     "    def start_cluster(self, n_cpus, cluster_id):\n",
     "        print('\\tAttempting to start {}{} with {} CPUs'.format(self.cluster_name, cluster_id, n_cpus))\n",
@@ -306,6 +367,7 @@
     "            self.client_dict[cluster_id] = self.start_cluster(n_cpus, cluster_id)\n",
     "            self.load_balanced_view_dict[cluster_id] = self.client_dict[cluster_id].load_balanced_view()            \n",
     "        print('All clusters started\\n')\n",
+    "        self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
     "        \n",
     "    def kill_cluster(self, cluster_id): # use better arguments\n",
     "        # client = client_list[cluster_id]\n",
@@ -317,6 +379,7 @@
     "        os.system('ipcluster stop --profile={}{}'.format(self.cluster_name, cluster_id))\n",
     "        print('\\t\\tCluster successfully killed')\n",
     "        time.sleep(5) # hard-coded\n",
+    "        # have to mutate cluster_indexes\n",
     "        \n",
     "    def kill_all_clusters(self):\n",
     "        print('\\nAttempting to kill all clusters')\n",
@@ -324,20 +387,21 @@
     "            self.kill_cluster(cluster_id)\n",
     "        print('All clusters have been killed\\n')\n",
     "        \n",
-    "    def running_clusters(self):        \n",
+    "    def run_clusters(self):        \n",
     "        small_file_ctr = 1 # determine if you want to have queue or differently ordered queue\n",
     "        big_file_ctr = 0\n",
+    "        \n",
     "\n",
     "        for ith_file in tqdm(range(len(self.file_names))):\n",
-    "            for jth_cluster in itertools.cycle(sorted(self.load_balanced_view_dict)): # infinite loop\n",
+    "            for jth_cluster in self.cluster_indexes: # infinite loop\n",
     "                time.sleep(1) # hard coded delay time; want to do expected log time lag / number of clusters\n",
     "                ### insert code here to kill cluster if RAM usage too great, if possible log which file it was processing;\n",
     "                ### it has to do a global search of all clusters' RAM usage\n",
     "                ### would need a dictionary here to remember which cluster has which file; write to disk\n",
     "                ### profiler would also write to disk CPU usage what level\n",
     "\n",
-    "                if (not async_results_dict[jth_cluster][-1:] \n",
-    "                    or async_results_dict[jth_cluster][-1].done()): # check if cluster i is available                       \n",
+    "                if (not self.async_results_dict[jth_cluster][-1:] \n",
+    "                    or self.async_results_dict[jth_cluster][-1].done()): # check if cluster i is available                       \n",
     "                    # if necessary, recreate engine here\n",
     "                    if jth_cluster == 0: # Send large files to large cluster (ALWAYS has id == 0)\n",
     "                        index = big_file_ctr\n",
@@ -349,21 +413,68 @@
     "                                     \n",
     "                    # clear cluster memory \n",
     "\n",
+    "                    # package_arguments\n",
+    "                    args = {} + function_args_dict\n",
+    "                    \n",
+    "                    \n",
     "                    ### insert code to write results to file--it will only have start times, no end times\n",
-    "                    async_result = load_balanced_view_dict[jth_cluster].map_async(\n",
+    "                    async_result = self.load_balanced_view_dict[jth_cluster].map_async(\n",
     "                            self.function_to_process, # function name\n",
     "                            [self.file_names[index]] * len(self.client_dict[jth_cluster].ids), # file name, assumes first argument is always file name\n",
     "                            # [len(client_list[i].ids)] * len(client_list[i].ids), # number of CPUs, assumes second argument is always number of CPUs\n",
     "                            #  client_list[i].ids # CPU ids, assumes third argument is always CPU id; actually turn into kwargs\n",
     "                             # [output_folder_name] * len(client_list[i].ids) # assumes fourth argument is output directory\n",
-    "                            [function_args_dict] * len(self.client_dict[jth_cluster].ids)\n",
+    "                            [self.function_args_dict] * len(self.client_dict[jth_cluster].ids)\n",
     "                            )\n",
     "                                              \n",
     "                    self.async_results_dict[jth_cluster].append(async_result)\n",
     "                    print(\"{} is the {}th file and is sent to {}{} for processing\".format(self.file_names[index], ith_file, self.cluster_name, jth_cluster))\n",
     "                    break # break out of inner loop to determine if other clusters are available\n",
-    "        # async_results_dict; save to disk for later inspection?"
+    "        # async_results_dict; save to disk for later inspection?\n",
+    "        \n",
+    "    def main(self):\n",
+    "        start_time = datetime.now()\n",
+    "        print('\\nStarting Multiple Cluster Engine at {}\\n'.format(start_time))\n",
+    "        self.start_all_clusters()\n",
+    "        self.run_clusters()\n",
+    "        self.kill_all_clusters()\n",
+    "        end_time = datetime.now()\n",
+    "        print('\\nMultiple Cluster Engine shut down at {}'.format(end_time))\n",
+    "        print('Total run time is {} minutes\\n'.format((end_time - start_time).seconds / 60))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bobbypee-a-boo!"
+     ]
+    }
+   ],
+   "source": [
+    "!cat 0.tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fun_func('0.tmp', **{'save_string_to_file': 'pee-a-boo!'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -371,58 +482,303 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 3 required positional arguments: 'file_names', 'function_to_process', and 'function_args_dict'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-cf8743aa7cc0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     }\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mmce\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMultipleClusterEnginePrototype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mmce_args\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 3 required positional arguments: 'file_names', 'function_to_process', and 'function_args_dict'"
-     ]
-    }
-   ],
-   "source": [
-    "mce_args = {\n",
-    "    'cluster_name': 'mycluster',\n",
-    "    'n_cpus_list': [4, 3, 2], # 1st cluster is always the largest or equal to the other clusters\n",
-    "    \n",
-    "    }\n",
-    "\n",
-    "mce = MultipleClusterEnginePrototype(**mce_args)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
+      "Starting Multiple Cluster Engine at 2018-02-24 01:00:03.373128\n",
+      "\n",
+      "\n",
       "Attempting to start all clusters\n",
       "\tAttempting to start mycluster0 with 4 CPUs\n",
-      "\t\tCPU processes ready for action: [5261, 5263, 5265, 5269]\n",
+      "\t\tCPU processes ready for action: [8442, 8444, 8446, 8450]\n",
       "\tAttempting to start mycluster1 with 3 CPUs\n",
-      "\t\tCPU processes ready for action: [5332, 5334, 5336]\n",
-      "\tAttempting to start mycluster2 with 2 CPUs\n",
-      "\t\tCPU processes ready for action: [5392, 5394]\n",
+      "\t\tCPU processes ready for action: [8513, 8515, 8517]\n",
+      "\tAttempting to start mycluster2 with 2 CPUs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/10 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t\tCPU processes ready for action: [8573, 8575]\n",
       "All clusters started\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 10%|█         | 1/10 [00:01<00:09,  1.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.tmp is the 0th file and is sent to mycluster0 for processing\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 20%|██        | 2/10 [00:02<00:08,  1.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.tmp is the 1th file and is sent to mycluster1 for processing\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 30%|███       | 3/10 [00:03<00:07,  1.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.tmp is the 2th file and is sent to mycluster2 for processing\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 40%|████      | 4/10 [00:04<00:06,  1.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.tmp is the 3th file and is sent to mycluster0 for processing\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 50%|█████     | 5/10 [00:05<00:05,  1.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.tmp is the 4th file and is sent to mycluster1 for processing\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 60%|██████    | 6/10 [00:06<00:04,  1.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.tmp is the 5th file and is sent to mycluster2 for processing\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 70%|███████   | 7/10 [00:07<00:03,  1.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.tmp is the 6th file and is sent to mycluster0 for processing\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 80%|████████  | 8/10 [00:08<00:02,  1.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.tmp is the 7th file and is sent to mycluster1 for processing\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 90%|█████████ | 9/10 [00:09<00:01,  1.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.tmp is the 8th file and is sent to mycluster2 for processing\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "100%|██████████| 10/10 [00:10<00:00,  1.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.tmp is the 9th file and is sent to mycluster0 for processing\n",
+      "\n",
+      "Attempting to kill all clusters\n",
+      "\tAttempting to kill mycluster0 with CPU processes: [8442, 8444, 8446, 8450]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t\tCluster successfully killed\n",
+      "\tAttempting to kill mycluster1 with CPU processes: [8513, 8515, 8517]\n",
+      "\t\tCluster successfully killed\n",
+      "\tAttempting to kill mycluster2 with CPU processes: [8573, 8575]\n",
+      "\t\tCluster successfully killed\n",
+      "All clusters have been killed\n",
+      "\n",
+      "\n",
+      "Multiple Cluster Engine shut down at 2018-02-24 01:01:01.541443\n",
+      "Total run time is 0.9666666666666667 minutes\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "mce.start_all_clusters()"
+    "def fun_func(file_name, save_string_to_file):\n",
+    "    with open(file_name, 'a') as f:\n",
+    "        f.write(save_string_to_file)\n",
+    "\n",
+    "mce_args = {\n",
+    "    'cluster_name': 'mycluster',\n",
+    "    'n_cpus_list': [4, 3, 2], # 1st cluster is always the largest or equal to the other clusters\n",
+    "    'file_names': ['{}.tmp'.format(i) for i in range(10)],\n",
+    "    'function_to_process': fun_func,\n",
+    "    'function_args_dict': {'save_string_to_file': 'pee-a-boo!'}\n",
+    "    }\n",
+    "\n",
+    "mce = MultipleClusterEnginePrototype(**mce_args)\n",
+    "#mce.start_all_clusters()\n",
+    "mce.main()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "mce.run_clusters()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cat 1.tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {0: [<AsyncMapResult: fun_func:finished>,\n",
+       "              <AsyncMapResult: fun_func:finished>,\n",
+       "              <AsyncMapResult: fun_func:finished>,\n",
+       "              <AsyncMapResult: fun_func:finished>],\n",
+       "             1: [<AsyncMapResult: fun_func:finished>,\n",
+       "              <AsyncMapResult: fun_func:finished>,\n",
+       "              <AsyncMapResult: fun_func:finished>],\n",
+       "             2: [<AsyncMapResult: fun_func:finished>,\n",
+       "              <AsyncMapResult: fun_func:finished>,\n",
+       "              <AsyncMapResult: fun_func:finished>]})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mce.async_results_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = mce.async_results_dict[0][-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -433,12 +789,6 @@
      "text": [
       "\n",
       "Attempting to kill all clusters\n",
-      "\tAttempting to kill mycluster0 with CPU processes: [5261, 5263, 5265, 5269]:\n",
-      "\t\tCluster successfully killed\n",
-      "\tAttempting to kill mycluster1 with CPU processes: [5332, 5334, 5336]:\n",
-      "\t\tCluster successfully killed\n",
-      "\tAttempting to kill mycluster2 with CPU processes: [5392, 5394]:\n",
-      "\t\tCluster successfully killed\n",
       "All clusters have been killed\n",
       "\n"
      ]
@@ -451,17 +801,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-02-24 00:59:17.380 [IPClusterStop] CRITICAL | Could not read pid file, cluster is probably not running.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ipcluster stop --profile=mycluster1"
+   ]
   },
   {
    "cell_type": "code",
@@ -583,31 +936,6 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "mapper_reducer_function(**kwargs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "async_object = load_balanced_view_list[i].map_async(\n",
-    "                    function_name, \n",
-    ") \n",
-    "my_async_results_list[i].append(async_object)"
-   ]
   },
   {
    "cell_type": "code",
